--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@
 body{
     display: block;
     border-color: black;
+    margin: none;
+    padding: none;
     
 }
 
@@ -17,7 +19,8 @@ body{
     border: none;
     border-color: black;
     padding: none;
-    background-image: url(/img/hd-back5.jpg);
+    background: rgb(0,0,0);
+    background: linear-gradient(125deg, rgba(0,0,0,1) 0%, rgba(62,10,10,1) 76%, rgba(255,0,0,1) 100%);
     background-repeat: no-repeat;
     background-size: cover;
 }
