--- a/index.css
+++ b/index.css
@@ -66,6 +66,8 @@ body{
     display: inline-block;
     align-self: center;
     padding-right: 30%;
+    width: 200px;
+    height: 100px;
 }
 
 .hd-dropdown {
